fixed method alignment

--- a/src/Main.css
+++ b/src/Main.css
@@ -52,22 +52,22 @@
   }
   
   /* Place the container to the left */
-  /* .left {
-    left: 0;
-  } */
-  .container:nth-child(odd){
+  .left {
     left: 0;
   }
+  /* .container:nth-child(odd){
+    left: 0;
+  } */
   
   
 
   /* Place the container to the right */
-  /* .right {
-    left: 50%;
-  } */
-  .container:nth-child(even){
+  .right {
     left: 50%;
   }
+  /* .container:nth-child(even){
+    left: 50%;
+  } */
   
   
   /* Add arrows to the left container (pointing right) */
